erDiagram
    Category {
        uuid categoryId PK
        varchar strValue
        varchar type
        smallint numValue
    }
    
    Publication {
        uuid publicationId PK
        varchar title
        text[] description
        text[] note
        boolean public
        boolean published
        varchar thumbnail
        uuid type FK
        uuid style FK
        uuid author FK
    }
    
    Content {
        uuid contentId PK
        uuid publication FK
        int totalPrepTime "SUM(ContentPrepTime + SegmentPrepTime)"
        int servings
    }
    
    Segment {
        uuid segmentId PK
        varchar title
        text paragraph
        smallint orderNum
    }
    
    PrepTime {
        uuid prepTimeId PK
        smallint duration
        uuid category FK
    }
    
    Ingredient {
        uuid ingredientId PK
        smallint quantity
        uuid isRecipe FK
        uuid product FK
    }
    
    Product {
        uuid productId PK
        varchar name
        varchar enName
        uuid macro FK
        uuid category FK
    }
    
    Unit {
        uuid unitId PK
        varchar name
    }
    
    Macro {
        uuid macroId PK
        smallint calories
        smallint protein
        smallint fiber
        smallint sugar
        smallint saturated
        smallint trans
        smallint caffein
    }
    
    Review {
        uuid reviewId PK
        uuid product FK
        uuid publication FK
        smallint rating
        text[] comment
        text[] description
        char buyAgain
        date dateReview
    }
    
    %% Junction Tables
    ContentSegment {
        uuid content FK
        uuid segment FK
        smallint position
    }
    
    ContentIngredient {
        uuid content FK
        uuid ingredient FK
    }
    
    ContentPrepTime {
        uuid content FK
        uuid prepTime FK
    }
    
    SegmentPrepTime {
        uuid segment FK
        uuid prepTime FK
    }
    
    IngredientUnit {
        uuid ingredient FK
        uuid unit FK
    }
    
    PublicationTag {
        uuid publication FK
        uuid category FK
    }
    
    ProductCategory {
        uuid product FK
        uuid category FK
    }
    
    PrepTimeCategory {
        uuid prepTime FK
        uuid category FK
    }

    %% ===========================
    %% RELATIONS & CALCULATION FLOW
    %% ===========================
    
    %% Category relations via junction tables
    Category ||--o{ PublicationTag : "publication tags"
    PublicationTag }o--|| Publication : ""
    
    Category ||--o{ ProductCategory : "product categories"
    ProductCategory }o--|| Product : ""
    
    Category ||--o{ PrepTimeCategory : "prep time categories"
    PrepTimeCategory }o--|| PrepTime : ""
    
    %% Direct Category FK relations (type/style/author)
    Category ||--o{ Publication : "type/style/author"
    
    %% Publication -> Content (1:N, minimum 1)
    Publication ||--o{ Content : "contains (min 1)"
    
    %% Content relations (M:N via junction tables)
    Content ||--o{ ContentSegment : ""
    ContentSegment }o--|| Segment : ""
    
    Content ||--o{ ContentIngredient : ""
    ContentIngredient }o--|| Ingredient : ""
    
    Content ||--o{ ContentPrepTime : "direct prep times"
    ContentPrepTime }o--|| PrepTime : ""
    
    %% Segment -> PrepTime (M:N) - KEY FOR CALCULATION
    Segment ||--o{ SegmentPrepTime : "segment prep times"
    SegmentPrepTime }o--|| PrepTime : ""
    
    %% Ingredient relations
    Ingredient ||--|| Product : "has product"
    Ingredient ||--o{ IngredientUnit : ""
    IngredientUnit }o--|| Unit : ""
    Product }o--o| Publication : "isRecipe (optional)"
    
    %% Product relations
    Product ||--o| Macro : "has macros"
    
    %% Review relations
    Review }o--o| Product : "review product"
    Review }o--o| Publication : "review publication"